--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "expo": "~46.0.16",
+    "expo-camera": "~12.3.0",
+    "expo-face-detector": "^11.3.0",
+    "expo-permissions": "^13.2.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6"
